crates/stc_ts_file_analyzer/tests/pass/controlFlow/dependentDestructuredVariables/4.ts
//@strict: true

type Func = <T extends ["a", number] | ["b", string]>(...args: T) => void;

const f60: Func = (kind, payload) => {
  if (kind === "a") {
    payload.toFixed(); // error
  }
  if (kind === "b") {
    payload.toUpperCase(); // error
  }
};
